K8s-deployment/Charts/os-ticket/osticket-mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: osticket-mysql
spec:
  serviceName: osticket-mysql
  replicas: 1
  selector:
    matchLabels:
      app: osticket-mysql
  template:
    metadata:
      labels:
        app: osticket-mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "standard"
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: osticket-mysql
spec:
  selector:
    app: osticket-mysql
  ports:
  - port: 3306
    targetPort: 3306
  clusterIP: None
