K8s-deployment/Charts/os-ticket/osticket-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osticket-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: osticket-web
  template:
    metadata:
      labels:
        app: osticket-web
    spec:
      containers:
      - name: osticket
        image: ghcr.io/datakaveri/os-ticket:1.0.1
        ports:
        - containerPort: 80
        volumeMounts:
        - name: uploads
          mountPath: /var/www/html/upload
        - name: config
          mountPath: /var/www/html/include/ost-config
      volumes:
      - name: uploads
        persistentVolumeClaim:
          claimName: osticket-uploads
      - name: config
        persistentVolumeClaim:
          claimName: osticket-config
---
apiVersion: v1
kind: Service
metadata:
  name: osticket-web
spec:
  selector:
    app: osticket-web
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
  type: NodePort
