K8s-deployment/Charts/os-ticket/osticket-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: osticket-web
  namespace: os-ticket
spec:
  selector:
    app: osticket-web
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: osticket-ingress
  namespace: os-ticket
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "<Enter issuer name here>"
spec:
  tls:
  - hosts:
    - <Enter host name here>
    secretName: osticket-tls
  rules:
  - host: <Enter host name here>
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: osticket-web
            port:
              number: 80
